--- a/CompraVentaPrecios/Content/site.css
+++ b/CompraVentaPrecios/Content/site.css
@@ -6,13 +6,16 @@ th {
     border-bottom: 1px solid #efefef !important;
 }
 
-.w35 {  width: 35px; }
+.w35 { width:35px; }
 .w50 { width: 50px; }
+.w75 { width: 75px; }
 .w80 { width: 80px; }
 .w100 { width: 100px; }
-.w120 { width: 125px; }
+.w125 { width: 125px; }
+.w140 { width:140px; }
 .w200 { width: 200px; }
-.w300 { width: 300px; }
+.m200 { margin-right: -200px }
+.w300{ width:300px; }
 .wm500 {
     width: 400px;
     min-width: 400px;
@@ -20,6 +23,18 @@ th {
 }
 .mw600 { min-width:600px; }
 .mw200 { min-width:200px; }
+
+#tblDetalle {
+    table-layout: fixed;
+}
+#tblDetalle thead tr th {
+    text-align: center;
+    font-size: 13.5px;
+    vertical-align: middle;
+}
+#tblDetalle tbody tr td {
+    font-size: 13.5px;
+}
 #tblCompra tbody tr td {
     vertical-align: middle;
 }
