--- a/CompraVentaPrecios/Views/Costo/Index.cshtml
+++ b/CompraVentaPrecios/Views/Costo/Index.cshtml
@@ -1,5 +1,95 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Costos</h1>
+<div class="row">
+    <div class="card">
+        <div class="card-header">
+            COSTOS DE MERCADERÍA
+        </div>
+        <div class="card-body" style="overflow-x: auto">
+            <div class="col-6 mb-4 mt-3">
+                <div class="form-inline">
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label class="mr-2 ml-2 mb-2">Fecha de Compra </label>
+                            <input type="date" id="txtFechaCompra" class="form-control mr-2 mb-2">
+                            <button id="btnObtenerCostos" type="button" class="btn btn-success mb-2" onclick="ObtenerCostos()">Obtener Costos</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <table class="table table-bordered table-sm mb-5 wm500">
+                <tbody>
+                    <tr>
+                        <th class="text-right w200">Total Factura</th>
+                        <td id="tdTotalFactura" class="w100">0.00</td>
+                    </tr>
+                    <tr id="rowAfter">
+                        <th class="text-center">Gastos</th>
+                        <th class="text-right">Monto</th>
+                    </tr>
+                    <tr id="rowBefore">
+                        <td class="text-center">&hellip;&hellip;&hellip;</td>
+                        <td class="text-right">0.00</td>
+                    </tr>
+                    <tr>
+                        <th class="text-right">Total Gasto</th>
+                        <td id="tdTotalGasto" class="text-right">0.00</td>
+                    </tr>
+                    <tr>
+                        <th class="text-right">% Costo</th>
+                        <td id="tdPorcCosto" class="text-right">0%</td>
+                    </tr>
+                    <tr>
+                        <th class="text-right">Total Costo</th>
+                        <td id="tdTotalCosto" class="text-right">0.00</td>
+                    </tr>
+                </tbody>
+            </table>
+            <table class="table table-striped table-bordered table-sm" id="tblDetalle">
+                <thead>
+                    <tr>
+                        <th class="w50">Id</th>
+                        <th class="w300">Producto</th>
+                        <th class="w80">Cantidad</th>
+                        <th class="w80">Precio Compra</th>
+                        <th class="w80">Total Factura</th>
+                        <th class="w100">%Costo</th>
+                        <th class="w80">Costo Unidad</th>
+                        <th class="w100">Total Costo Unidad</th>
+                        <th class="w80">Costo Total</th>
+                        <th class="w125">
+                            %Ganancia
+                            <div class="form-row ml-1 mt-1">
+                                <input id="txtPorcGanancia" type="text" maxlength="4" class="form-control w75 btn-sm text-center" placeholder="%" onkeypress="return EntradaPrecio(event);" onpaste="return false" />&nbsp;
+                                <button id="btnCalcular" type="button" class="btn btn-info btn-sm" onclick="Calcular()"><i class='fa fa-calculator'></i></button>
+                            </div>
+                        </th>
+                        <th class="w80">Precio Venta</th>
+                        <th class="w140">Precio Venta Establecido</th>
+                        <th class="w80">Total Venta</th>
+                        <th class="w100">Ganancia</th>
+                        <th class="w100">Total Utilidad Bruta</th>
+                        <th class="w140">Unidades Vendidas</th>
+                        <th class="w100">Total Vendido</th>
+                        <th class="w80">Stock</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+                <tfoot>
+                    <tr id="tfootRowBefore">
+                        <td class="text-right bg-light" colspan="18">
+                            <button type="button" class="btn btn-success btn-sm" onclick="GuardarGananciaVenta()">Guardar Ganancia Venta</button>
+                        </td>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
+    </div>
+</div>
+
+@section scripts{
+    <script src="~/Scripts/Operaciones/costo.js"></script>
+}
