Se agrega proceso para calcular el precio de venta establecido, ingresar el detalle de la ganancia y venta y se modifica método para obtener el detalle compra-gasto

--- a/CompraVentaPrecios/Views/Costo/Index.cshtml
+++ b/CompraVentaPrecios/Views/Costo/Index.cshtml
@@ -81,7 +81,7 @@
                 <tfoot>
                     <tr id="tfootRowBefore">
                         <td class="text-right bg-light" colspan="18">
-                            <button type="button" class="btn btn-success btn-sm" onclick="GuardarGananciaVenta()">Guardar Ganancia Venta</button>
+                            <button id="btnGananciaVenta" type="button" class="btn btn-success btn-sm" onclick="GuardarGananciaVenta()">Guardar Ganancia Venta</button>
                         </td>
                     </tr>
                 </tfoot>
